--- a/assets/custom.css
+++ b/assets/custom.css
@@ -13,7 +13,7 @@ html {
 
 /* Optional gradient shortcuts */
 .bg-gradient-dark {
-  background: hsla(205, 91%, 9%, 1);
+  background-color: #021a2b;
 
   background: linear-gradient(
     90deg,
@@ -40,7 +40,7 @@ html {
 }
 
 .bg-gradient-dark-reverse {
-  background: hsla(205, 91%, 9%, 1);
+  background-color: #021a2b;
 
   background: linear-gradient(
     90deg,
@@ -66,7 +66,7 @@ html {
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#021A2B", endColorstr="#042333", GradientType=1 );
 }
 .bg-gradient-light {
-  background: hsla(38, 70%, 71%, 1);
+  background-color: #e9c383;
 
   background: linear-gradient(
     270deg,
